opam-version: "2.0"
name: "bigstring-unix"
version: "0.2"
authors: "Simon Cruanes <simon.cruanes.2007@m4x.org>"
maintainer: "Simon Cruanes <simon.cruanes.2007@m4x.org>"
synopsis: "A set of utils for dealing with `bigarrays` of `char` and memory-mapping"
tags: [ "bigstring" "bigarray" ]
homepage: "https://github.com/c-cube/ocaml-bigstring/"
bug-reports: "https://github.com/c-cube/ocaml-bigstring/issues"
dev-repo: "git://github.com/c-cube/ocaml-bigstring.git"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
depends: [
  "dune" {>= "1.0"}
  "bigstring"
  "base-bigarray"
  "base-bytes"
  "base-unix"
  "ocaml" {>= "4.03.0"}
]

