opam-version: "1.2"
name: "bigstring"
version: "0.2"
authors: "Simon Cruanes <simon.cruanes.2007@m4x.org>"
maintainer: "Simon Cruanes <simon.cruanes.2007@m4x.org>"
tags: [ "bigstring" "bigarray" ]
homepage: "https://github.com/c-cube/ocaml-bigstring/"
bug-reports: "https://github.com/c-cube/ocaml-bigstring/issues"
dev-repo: "git://github.com/c-cube/ocaml-bigstring"

available: [ ocaml-version >= "4.03.0" ]

build: [ "dune" "build" "-p" name "-j" jobs ]
build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "dune" {>= "1.0"}
  "base-bigarray"
  "base-bytes"
]

