(executable
 (name configure)
 (modules Configure))

(rule
 (target bigstring_compat.ml)
 (action (with-stdout-to %{target}
  (run ./configure.bc))))

(library
 (name bigstring)
 (public_name bigstring)
 (modules Bigstring)
 (synopsis "Bigstring built on top of bigarrays, and convenient functions.")
 (libraries bytes bigarray))

(library
 (name bigstring_unix)
 (public_name bigstring-unix)
 (modules Bigstring_compat Bigstring_unix)
 (flags :standard -warn-error -3) ; deprecation
 (synopsis "Bigstrings from Unix memory mapping.")
 (libraries bigstring unix))
